# lrctoolbox

./: .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.rst  README.md  pyproject.toml  tox.ini
.github/workflows/: pypi-publish.yaml  tests.yaml
docs/: conf.py  index.rst  lrctoolbox.exceptions.rst  lrctoolbox.lrc_metadata.rst  lrctoolbox.rst  lrctoolbox.synced_lyric_line.rst  lrctoolbox.synced_lyrics.rst  modules.rst
docs/examples/: example.lrc  index.rst  working_with_lrc.ipynb
lrctoolbox/: __init__.py  lrc_metadata.py  synced_lyrics.py
lrctoolkit/: lrc_metadata.py  synced_lyrics.py
tests/: conftest.py  test_lrc_metadata.py  test_synced_lyric_line.py  test_synced_lyrics.py  test_synced_lyrics_errors.py  test_unsynced_lyrics.py
