[tool.poetry]
name = "lrctoolkit"
version = "0.1.0"
description = "toolkit for working with lrc files"
authors = ["Dr-Blank <64108942+Dr-Blank@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
